2015-01-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sun.c (ReadSUNImage): Sun reader was still not as robust
	as it should be.  Now it is.

2014-01-10 Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/wpg.c Fixed reading behind EOF issue.

2015-01-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (LSBPackedU32WordToOctets): Fix typo which adds
	severe corruption to encoded little-endian 32-bit packed output.
	The good news is that since the corruption is severe, it is easily
	visually detected.  The problem has corrupted all such
	(little-endian 10-bit) output since it was originally implemented
	on 2007-06-17 (changeset 11686, first released in GraphicsMagick
	1.1.8).  GraphicsMagick preserves the endianness of input DPX
	files by default, defaults to big-endian, and DPX files are
	commonly big-endian, so this problem may not have occured for many
	usages.  Problem was reported by Steve Dabner on the
	GraphicsMagick discussion mailing list.

2015-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (MagickPanicSignalHandler): Print a message in
	the case of signals SIGXCPU and SIGXFSZ.

	* coders/bmp.c (ReadBMPImage): Don't hang in endless loop if EOF
	is encountered while checking for "BA" header.

	* coders/icon.c (ReadIconImage): Limit icon image allocation size.

2015-01-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/icon.c (ReadIconImage): Removed all of the
	previously-existing DIB reading code from icon.c and use new
	"ICODIB" reader to read DIB icons, or the PNG reader to read PNG
	icons.

	* coders/dib.c (ReadDIBImage): Added an "ICODIB" coder for
	internal use which reads a Windows BMP 3 DIB followed by a Windows
	ICO alpha mask.  This allows existing DIB code to be used to read
	ICO directory entries.

2015-01-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/icon.c: The Windows ICO reader is now more robust.  Still