@@ -38,6 +38,8 @@
 <p>2015-01-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pict.c (ReadPICTImage): Fix PICT reader crash when
+reading corrupted file.</li>
 <li>coders/sun.c (ReadSUNImage): Sun reader was still not as robust
 as it should be.  Now it is.</li>
 </ul>
